--- a/src/index.css
+++ b/src/index.css
@@ -125,3 +125,26 @@ label {
 .btn-percentage {
   padding: 0.5rem 0.5rem;
 }
+ @media(max-width:375px){
+  .container{
+    flex-direction: column;
+    align-items: center;
+  }
+  .tip-container, .bill-container{
+    width: 90%;
+    margin: 20px auto;
+  }
+ }
+
+ @media (min-width: 1440px) {
+  .container {
+    flex-direction: row; 
+    align-items: initial; 
+  }
+
+  .bill-container,
+  .tip-container {
+    width: 290px; 
+    margin: 20px 20px; 
+  }
+}
